# ARES-Project

./: .gitignore  ARES_Project.md  BUILD_MANUAL.md  CMakeLists.txt  ENHANCEMENTS.md  PERFORMANCE.md  QUICK_START.md  README.md  RESULTS.md  blurred_baseline.ppm  blurred_simd.ppm  build.ps1  original.ppm  visualize_performance.py
benchmarks/: CMakeLists.txt  bench_aes.cpp  bench_gaussian.cpp
demo/: CMakeLists.txt  demo.cpp
include/ares/: aes.hpp  gaussian_blur.hpp  image_io.hpp
src/: CMakeLists.txt  aes_baseline.cpp  aes_simd.cpp  gaussian_baseline.cpp  gaussian_multithreaded.cpp  gaussian_simd.cpp  gaussian_tiled.cpp  image_io.cpp
tests/: CMakeLists.txt  test_aes.cpp  test_gaussian.cpp
